# PongGame

./: .gitignore  .gitmodules  CMakeLists.txt  PongGame.sln  PongGame.vcxproj  PongGame.vcxproj.filters
classes/: Ball.cpp  Game.cpp  InputHandler.cpp  InputHandler.hpp  Player.cpp
functions/: randNumber.cpp  textManagement.cpp
include/classes/: Ball.hpp  Game.hpp  Player.hpp
include/functions/: functions.hpp
include/initialization/: InitUI.hpp
include/structures/: TextProperties.hpp
initialization/: InitUI.cpp
resources/: gameTitle.res
src/: run.cpp
src/classes/: Ball.cpp  Game.cpp  InputHandler.cpp  Player.cpp
src/functions/: randNumber.cpp  textManagement.cpp
src/initialization/: InitUI.cpp
src/structures/: TextProperties.cpp
structures/: TextProperties.cpp
treatment/: run.cpp
